Fixed alignment again
Fixed alignment again

--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -60,6 +60,7 @@ h2 {
   height: 100%;
   width: 100%;
   float: left;
+  box-shadow: 0 -2px 5px 2px black inset;
 }
 div.center {
   text-align: center;
